--- a/src/app/read/read.component.html
+++ b/src/app/read/read.component.html
@@ -1,1 +1,50 @@
-I'm a read {{reading.read}}
+<div class="reading">
+    <h2 class="card-title">Read {{reading.index}}</h2>
+    <div class="card">
+        <div class="card-body">
+            <form>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-sm-10">
+                                <h3><label for="reading{{reading.index}}">Read</label></h3>
+                        </div>
+                        <div class="col-sm-2">
+                            <button (click)="removeReading(reading.index - 1)" class="btn btn-danger float-right">X</button>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-10">
+                                <input (keyup)="updateReading($event)" value="{{reading.reading}}" type="text" class="form-control" id="reading{{reading.index}}" placeholder="Reading">
+                        </div>
+                        <div class="col-sm-2">
+                            <button class="btn btn-secondary float-right" (click)="generateReading()">Generate</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="row">
+                            <div class="col-sm-12">
+                                <h3><label for="search{{reading.index}}">Search</label></h3>
+                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                                <input (keyup)="updateSearch($event)" value="{{reading.search}}" type="text" class="form-control" id="search{{reading.index}}" placeholder="Search">
+                        </div>
+                        <div class="col-sm-4">
+                            <h4>Found : {{reading.instancesOfSearchString.length}}</h4>
+                            <h4>#{{reading.showingMatch}} at position:{{reading.indexOfElement()}}</h4>
+                        </div>
+                        <div class="col-sm-4">
+                                <button (click)="goBack($event)" id="back-btn-{{reading.index}}" class="btn btn-secondary back-button"><</button>
+                                <button (click)="goNext($event)" id="forward-button-{{reading.index}}" class="btn btn-secondary">></button>
+
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
