--- a/src/app/read/read.component.html
+++ b/src/app/read/read.component.html
@@ -15,7 +15,7 @@
 
                     <div class="row">
                         <div class="col-sm-10">
-                                <input pattern="^[ACGT]{0,160}$" maxlength="150" (keyup)="updateReading($event)" value="{{reading.reading}}" type="text" class="form-control" id="reading{{reading.index}}" placeholder="Reading">
+                                <input maxlength="150" (keyup)="updateReading($event)" value="{{reading.readingVal}}" type="text" class="form-control" id="reading{{reading.index}}" placeholder="Reading">
                         </div>
                         <div class="col-sm-2">
                             <button class="btn btn-secondary float-right" (click)="generateReading()">Generate</button>
@@ -31,15 +31,15 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                                <input pattern="^[ACGT]{0,10}$" maxlength="10" (keyup)="updateSearch($event)" value="{{reading.search}}" type="text" class="form-control" id="search{{reading.index}}" placeholder="Search">
+                                <input maxlength="10" (keyup)="updateSearch($event)" value="{{reading.searchVal}}" type="text" class="form-control" id="search{{reading.index}}" placeholder="Search">
                         </div>
                         <div class="col-sm-4">
                             <h4>Found : {{reading.instancesOfSearchString.length}}</h4>
-                            <h4 *ngIf="reading.showPositionBlock()" id="positions-{{reading.index}}" class="">#{{reading.showingMatch}} at position:{{reading.indexOfElement()}}</h4>
+                            <h4 *ngIf="reading.hasResults()" id="positions-{{reading.index}}" class="">#{{reading.showingMatch}} at position:{{reading.indexOfElement()}}</h4>
                         </div>
                         <div class="col-sm-4">
-                                <button [disabled]="reading.backShouldBeDisabled()" (click)="goBack($event)" id="back-btn-{{reading.index}}" class="btn btn-secondary back-button"><</button>
-                                <button [disabled]="reading.forwardShouldBeDisabled()" (click)="goNext($event)" id="forward-button-{{reading.index}}" class="btn btn-secondary">></button>
+                                <button [disabled]="reading.showingFirstResult()" (click)="goBack($event)" id="back-btn-{{reading.index}}" class="btn btn-secondary back-button"><</button>
+                                <button [disabled]="reading.showingLastResult()" (click)="goNext($event)" id="forward-button-{{reading.index}}" class="btn btn-secondary">></button>
                         </div>
                     </div>
                 </div>
